# gemini-rust

./: .gitignore  Cargo.toml  README.md  tests.sh
src/: fee_volume.rs  lib.rs  order_placer.rs  order_status.rs  public.rs  utils.rs
tests/: cfg.example.toml  cfg.rs  integration_fee_volume.rs  integration_order_placer.rs  integration_order_status.rs  integration_public.rs
