[package]
name = "gemini-rust"
version = "0.1.0"
edition = "2018"

[dependencies]
ureq = { version = "1.5.4", features = ["json"] }
serde = { version = "1.0.118", features = ["derive"] }
serde_json = "1.0.60"
chrono = "0.4.19"
base64 = "0.13.0"
hmac-sha512 = "0.1.8"
hex = "0.4.2"
byteorder = "1.3.4"
config = "0.9"
